--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
 *.war filter=lfs diff=lfs merge=lfs -text
 *.gz filter=lfs diff=lfs merge=lfs -text
 *.tar filter=lfs diff=lfs merge=lfs -text
+*.exe filter=lfs diff=lfs merge=lfs -text
